LU-15 slow IO with read-intense application

Align the readahead extent by 1M after when it is trimed by ra_max_pages.

signed-off-by: Wang Di <di.wang@whamcloud.com>
Change-Id: I0359a39cef678b05e48617910081e9f27826ed22